--- a/index.css
+++ b/index.css
@@ -1,52 +1,61 @@
-body {
-    margin: 0px;
-    background-color: pink;
+.borderr {
+    border-style: groove;
+    border-radius: 20px;
+    border-top: 5px solid green;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    padding: 5px 10px 10px 10px;
+    margin-bottom: 20px;
+    font-size: 18px;
+    line-height: 160%;
+    font-weight: 400;
+    width: 700px;
+    padding-top: 10px;
+    background:white
+
 }
-@media screen and (max-width: 480px) {
-    body{
-        background-color: lightgreen;
-    }
-    
+
+.font {
+    text-decoration: underline;
+    color: rgb(14, 131, 131)
 }
-.header {
-    height: 120px;
+
+.img {
+
+    display: block;
     width: 100%;
-    background: linear-gradient(-180deg, #f53d2d, #f63);
-    color: white;
+    height: auto;
+    border-radius: 10px;
 }
 
-.container {
-    margin: 0 10%;
+.video {
+    width: 100%;
+    height: 450px;
+
 }
 
-.top-h {
-    /* padding-top: 10px; */
-    display: flex;
-    justify-content: space-between;
+.mennu {
+    padding-left: 24px;
+    color: green
 }
 
-.channel-top {
-    margin: 5px;
-    padding: 0px;
-    font-size: .8125rem;
-    display: flex;
+a {
+    text-decoration: none;
+    color: green
 }
 
-.d-flex-center{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.sticky-div {
+
+    position: sticky;
+    max-height: 100vh;
+
+    top: 0;
+    position: -webkit-sticky;
+
+    overflow: auto;
 }
 
-.inline {
-    display: inline;
-}
-
-.t-icon{
-    display: inline;
-    margin-right: 5px;
-}
-.t-content{
-    display: inline;
-    margin-right: 5px;
+a:active {
+    border-radius: 5px;
+    border: 0px;
+    background-color: rgb(21, 205, 144);
 }
